# printer_event_handler

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
examples/: Cargo.toml  README.md  async_patterns.rs  basic_listing.rs  error_handling.rs  monitor_changes.rs  property_monitoring.rs
src/: backend.rs  error.rs  lib.rs  main.rs  monitor.rs  printer.rs
