[package]
name = "printer_event_handler"
version = "0.1.0"
edition = "2021"
description = "A Windows printer status monitoring library using WMI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/printer_event_handler"
keywords = ["windows", "printer", "wmi", "monitoring"]
categories = ["os::windows-apis"]

[[bin]]
name = "printer_monitor"
path = "src/main.rs"

[lib]
name = "printer_event_handler"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time"] }
log = "0.4.27"
env_logger = "0.11.8"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
wmi = "0.17.2"