[package]
name = "printer_event_handler"
version = "1.1.0"
edition = "2024"
description = "A cross-platform printer status monitoring library for Windows and Linux"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PajakKamil/printer_event_handler"
keywords = ["printer", "monitoring", "cups", "wmi", "cross-platform"]
categories = ["os", "api-bindings"]

[[bin]]
name = "printer_monitor"
path = "src/main.rs"

[lib]
name = "printer_event_handler"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time", "process", "fs"] }
log = "0.4.27"
env_logger = "0.11.8"
chrono = { version = "0.4.41", features = ["serde"] }
async-trait = "0.1.89"

[target.'cfg(windows)'.dependencies]
wmi = "0.17.2"

